# freenect

./: .gitignore  PROGRESS  README.md  freenect.cabal
cbits/: freenect-helpers.c  freenect-helpers.h
examples/: examples.cabal
examples/src/: Glut.hs  GlutBoundary.hs  GlutRGB.hs  RGB.hs  SetLed.hs  Volume.hs
experiments/: Makefile  csynctest  csynctest.c
src/: Freenect.hs  Main.hs
src/Freenect/: FFI.hs
