Name:                freenect
Version:             1.2.1
Synopsis:            Interface to the Kinect device.
Description:         Interface to the Kinect device. Currently supports
                     depth perception. (No video or audio.)
Homepage:            https://github.com/chrisdone/freenect
License:             BSD3
License-file:        LICENSE
Author:              Chris Done, Kevin Conley, Chris Müller
Maintainer:          chrisdone@gmail.com
Copyright:           Chris Done
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6
Stability:           Experimental

source-repository head
  type:     git
  location: http://github.com/chrisdone/freenect

Library
  Hs-source-dirs:    src
  Exposed-Modules:   Freenect Freenect.FFI
  Ghc-options:       -O2
  Build-depends:     base > 4 && < 5, vector
  Includes:          libfreenect.h
  Extra-libraries:   freenect, freenect_sync
  C-sources:         cbits/freenect-helpers.c
  Include-dirs:      cbits
  Pkgconfig-Depends: libfreenect
