Name:                examples
Version:             0.1
Synopsis:            Examples of Kinect stuff.
Homepage:            https://github.com/chrisdone/freenect
License:             BSD3
License-file:        LICENSE
Author:              Chris Done
Maintainer:          chrisdone@gmail.com
Copyright:           Chris Done
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6
Stability:           Experimental

source-repository head
  type:     git
  location: http://github.com/chrisdone/freenect

Executable depth
  Hs-source-dirs:    ../src src
  Main-is:           Depth.hs
  Other-Modules:     Freenect Freenect.FFI
  Ghc-options:       -O2
  Build-depends:     base > 4 && < 5, vector, GLUT, OpenGL
  Includes:          libfreenect.h libfreenect_sync.h
  Extra-libraries:   freenect, freenect_sync
  C-sources:         ../cbits/freenect-helpers.c
  Include-dirs:      ../cbits

Executable glut
  Hs-source-dirs:    ../src src
  Main-is:           Glut.hs
  Other-Modules:     Freenect Freenect.FFI
  Ghc-options:       -O2 -threaded
  Build-depends:     base > 4 && < 5, vector, GLUT, OpenGL
  Includes:          libfreenect.h libfreenect_sync.h
  Extra-libraries:   freenect, freenect_sync
  C-sources:         ../cbits/freenect-helpers.c
  Include-dirs:      ../cbits
